fix css issue on small devices

--- a/app/assets/stylesheets/media_queries.scss
+++ b/app/assets/stylesheets/media_queries.scss
@@ -1,3 +1,11 @@
+// SMALLER PHONE
+@media screen and (max-width: 355px) {
+  header {
+    .logo {
+      font-size: 40px !important;
+    }
+  }
+}
 // PHONE
 @media screen and (max-width: 480px) {
   header {
